--- a/sign-up.html
+++ b/sign-up.html
@@ -17,9 +17,9 @@
       </div>
     </div>
 
-    <form class="styled-form">
+    <form action="index-2.html" class="styled-form" id="signup-form">
       <div class="form-group">
-        <input type="file" id="profileImage" accept="image/*" required />
+        <!-- <input type="file" id="profileImage" accept="image/*" required /> -->
       </div>
 
       <div class="form-group">
@@ -57,15 +57,65 @@
     </p>
   </div>
 
-  
   <!-- Firebase SDKs -->
-  <!-- necessary for Firebase services -->
-  <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-firestore.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.1.3/firebase-storage.js"></script>
+  <script type="module">
+    // Import Firebase modules
+    import { initializeApp } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-app.js';
+    import { getAuth, createUserWithEmailAndPassword } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-auth.js';
+    import { getFirestore, collection, doc, setDoc } from 'https://www.gstatic.com/firebasejs/9.23.0/firebase-firestore.js';
 
-  <script src="script/Signup.js" type="module"></script>
+    // Initialize Firebase
+    const firebaseConfig = {
+      apiKey: "AIzaSyAgdDRikWVnieInU_C6GLRQxL_u8mwuqxI",
+      authDomain: "nourishwise-fdc37.firebaseapp.com",
+      projectId: "nourishwise-fdc37",
+      storageBucket: "nourishwise-fdc37.appspot.com",
+      messagingSenderId: "948685887114",
+      appId: "1:948685887114:web:6fa1ab201e36680e7cff73",
+      measurementId: "G-TJENJWS1JX"
+    };
+
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const db = getFirestore(app);
+
+    // Handle signup
+    document.getElementById('signup-form').addEventListener('submit', async (e) => {
+      e.preventDefault();
+
+      const name = document.getElementById('name').value;
+      const email = document.getElementById('email').value;
+      const password = document.getElementById('password').value;
+      const role = document.getElementById('role').value;
+      const weight = document.getElementById('weight').value;
+      const height = document.getElementById('height').value;
+
+      try {
+        // Create user with email and password
+        const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+        const user = userCredential.user;
+
+        // Save user data to Firestore
+        await setDoc(doc(db, 'users', user.uid), {
+          uid: user.uid,
+          name: name,
+          email: email,
+          role: role,
+          weight: weight,
+          height: height,
+        });
+
+        alert('Signup successful! Redirecting to your dashboard...');
+
+        // Redirect to the customer dashboard
+        window.location.href = 'customer-dashboard.html'; // Change to your actual dashboard page
+
+      } catch (error) {
+        console.error('Error signing up:', error);
+        alert('Error signing up: ' + error.message);
+      }
+    });
+  </script>
 </body>
 
 </html>
