remove form action from login.html

--- a/login.html
+++ b/login.html
@@ -16,7 +16,7 @@
       <div class="diet-logo">
         <img src="assets/diet_logo_t.png" alt="diet-logo" />
       </div>
-      <form action="index-2.html" class="styled-form">
+      <form class="styled-form">
         <input
           type="email"
           id="inUsr"
