edit welcome username

--- a/customer-dashboard.html
+++ b/customer-dashboard.html
@@ -246,7 +246,7 @@
             <div class="user-profile">
               <img src="assets/img-1.jpg" alt="User Profile Picture" class="profile-pic">
               <div class="welcome-message">
-                <h2>Welcome, <span id="userName">User Name</span></h2>
+                <h2>Welcome, <span id="userName"></span></h2>
               </div>
             </div>
             <div class="progress-section">
