I change the redirection link to index-2.html in signup.html

--- a/sign-up.html
+++ b/sign-up.html
@@ -108,7 +108,7 @@
         alert('Signup successful! Redirecting to your dashboard...');
 
         // Redirect to the customer dashboard
-        window.location.href = 'customer-dashboard.html'; // Change to your actual dashboard page
+        window.location.href = 'index-2.html'; // Change to your actual dashboard page
 
       } catch (error) {
         console.error('Error signing up:', error);
